Correction JAVA ERROR
Résolution du JRE/JDK
Téléchargement de OpenJDK 16

--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -125,7 +125,7 @@
                 <div id="launch_content">
                     <button id="launch_button">JOUER</button>
                     <div class="bot_divider"></div>
-                    <button id="server_selection_button" class="bot_label">&#8226; No Server Selected</button>
+                    <button id="server_selection_button" class="bot_label">&#8226; Aucun Serveur Choisis</button>
                 </div>
                 <div id="launch_details">
                     <div id="launch_details_left">
@@ -134,7 +134,7 @@
                     </div>
                     <div id="launch_details_right">
                         <progress id="launch_progress" value="22" max="100"></progress>
-                        <span id="launch_details_text" class="bot_label">Please wait..</span>
+                        <span id="launch_details_text" class="bot_label">Merci de patientier..</span>
                     </div>
                 </div>
             </div>
