--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -215,7 +215,7 @@
             <div class="settingsFileSelContainer">
                 <div class="settingsFileSelTitle">Executable Java</div>
                 <div class="settingsFileSelContent">
-                    <div id="settingsJavaExecDetails">Selected: Java 8 Update 172 (x64)</div>
+                    <div id="settingsJavaExecDetails">Sélectionné: Java 8 Update 172 (x64)</div>
                     <div class="settingsFileSelActions">
                         <div class="settingsFileSelIcon">
                             <svg class="settingsFileSelSVG" x="0px" y="0px" viewBox="0 0 305.001 305.001">
@@ -232,7 +232,7 @@
                             </svg>
                         </div>
                         <input class="settingsFileSelVal" id="settingsJavaExecVal" type="text" value="null" cValue="JavaExecutable" disabled>
-                        <button class="settingsFileSelButton" id="settingsJavaExecSel" dialogTitle="Sélectionner Java Executable" dialogDirectory="false">Choose File</button>
+                        <button class="settingsFileSelButton" id="settingsJavaExecSel" dialogTitle="Sélectionner Java Executable" dialogDirectory="false">Choisir...</button>
                     </div>
                 </div>
                 <div class="settingsFileSelDesc">L'executable de Java est validé avant le lancement du jeu. <strong>A besoin de Java 16 x64 et +</strong><br>Le lien doit finir avec <strong>bin<%= process.platform === 'win32' ? '\\javaw.exe' : '/java' %></strong>.</div>
